--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -53,11 +53,13 @@
     <Compile Include="module_battle.cs" />
     <Compile Include="module_battle_Debug.cs" />
     <Compile Include="module_field_debug.cs" />
+    <Compile Include="module_main_menu_debug.cs" />
     <Compile Include="module_movie_test.cs" />
     <Compile Include="module_overture_debug.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PseudoBufferedStream.cs" />
+    <Compile Include="TEX.cs" />
     <Compile Include="TIM.cs" />
     <Compile Include="TIM2.cs" />
   </ItemGroup>
