in-dev progress; Upgraded TIM; added font support alpha

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -44,6 +44,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
+    <Compile Include="Font.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="init_debugger_Audio.cs" />
     <Compile Include="init_debugger_fields.cs" />
