--- a/FF8/App.config
+++ b/FF8/App.config
@@ -1,6 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="CSCore" publicKeyToken="5a08f2b6f4415dea" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.1.2" newVersion="1.2.1.2" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
