--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Font.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="init_debugger_Audio.cs" />
+    <Compile Include="init_debugger_battle.cs" />
     <Compile Include="init_debugger_fields.cs" />
     <Compile Include="LZSS.cs" />
     <Compile Include="Memory.cs" />
