--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -30,9 +30,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
-<PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
-  <DefineConstants>_WINDOWS</DefineConstants>
-</PropertyGroup>
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+    <DefineConstants>_WINDOWS</DefineConstants>
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
@@ -86,7 +86,7 @@
       <HintPath>..\AForge.Video.FFMPEG.dll</HintPath>
     </Reference>
     <Reference Include="DirectMidiNet">
-      <HintPath>D:\DirectMidiNet.dll</HintPath>
+      <HintPath>..\DirectMidiNet.dll</HintPath>
     </Reference>
     <Reference Include="NAudio, Version=1.8.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
