Fixed preprocessor directive + added battle Dat class

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -39,7 +39,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>TRACE;_WINDOWS;DEBUG</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -90,6 +90,7 @@
     <Compile Include="PseudoBufferedStream.cs" />
     <Compile Include="TEX.cs" />
     <Compile Include="TIM2.cs" />
+    <Compile Include="debug_battleDat.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="AForge.Video, Version=2.2.5.0, Culture=neutral, PublicKeyToken=cbfb6e07d173c401, processorArchitecture=MSIL">
