battleDat: skeleton structs

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="debug_MCH.cs" />
+    <Compile Include="ExtapathyExtended.cs" />
     <Compile Include="Font.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="init_debugger_Audio.cs" />
