Inputs, Ogg support, Check for Focus for mouse. Multi FF8DIR list. More
I added some Input Code. Mostly the ability to bind more than one input to a function.
Ogg support is i'd say 70% working as is. Might be a quality loss from converting from 32bit float to 16bit pcm. LOOPSTART is not working correctly. Should be the point where the SoundEffectInstance starts the loop from. But for some reason it is starting over. It might be working sometimes. I noticed the function gliched when I set a LOOPLENGTH and threw an exception for no reason. Setting LOOPLENGTH to 0 got past that issue. I look forward to FFMPEG replacing the need for SoundEffect.
Focus for mouse. I didn't like how when I was in the MAPs i couldn't tab out and use my mouse. So now when there is no focus the mouse is free. Though this isn't perfect. The mouse could escape.
Multi FF8DIR added a const array of directorys for FF8. When you first look for FF8DIR it will go through the list and pick the first one that exists. I got tired of changing the varible going back and forth from linux.
I took out the GetUnixFullPath(string pt) from some of the functions. I was having issues. Coulda just unset _WINDOWS. I tried to put it back. But everything seems to be working correctly.
Added a IsLinux property to MakiExtended as another way to check for linux with out having to remember to toggle _WINDOWS.
for some reason the field screen isn't working as far as I can tell it isn't anything I changed. I pulled the source down to another folder and it did the same thing.
I wanted to commit before I started trying anything else.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -17,6 +17,7 @@
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -29,7 +30,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -39,7 +39,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\$(MonoGamePlatform)\$(Platform)\$(Configuration)\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;_WINDOWS</DefineConstants>
+    <DefineConstants>DEBUG;_WINDOWS</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -117,9 +117,14 @@
     <Reference Include="DirectMidiNet">
       <HintPath>..\DirectMidiNet.dll</HintPath>
     </Reference>
-    <Reference Include="NAudio, Version=1.8.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\NAudio.dll</HintPath>
+    <Reference Include="NAudio, Version=1.8.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NAudio.1.8.5\lib\net35\NAudio.dll</HintPath>
+    </Reference>
+    <Reference Include="NAudio.Vorbis, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NAudio.Vorbis.1.0.0.0\lib\net35\NAudio.Vorbis.dll</HintPath>
+    </Reference>
+    <Reference Include="NVorbis, Version=0.8.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\NVorbis.0.8.6\lib\net35\NVorbis.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
@@ -141,7 +146,7 @@
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6">
       <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4.6 %28x86 i x64%29</ProductName>
+      <ProductName>Microsoft .NET Framework 4.6 %28x86 and x64%29</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
