--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 /.vs/FF8/v15/Server/sqlite3
+FF8/bin/x86/DebugLinux/AForge.dll
+FF8/bin/x86/DebugLinux/AForge.Video.dll
+FF8/bin/x86/DebugLinux/AForge.Video.FFMPEG.dll
+.vs/FF8/v15/.suo
+.vs/FF8/v15/.suo
+FF8/bin/x86/DebugLinux/AForge.xml
