--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -92,6 +92,7 @@
     <Compile Include="LZSS.cs" />
     <Compile Include="MakiExtended.cs" />
     <Compile Include="Memory.cs" />
+    <Compile Include="MemoryReader.cs" />
     <Compile Include="ModuleHandler.cs" />
     <Compile Include="module_battle.cs" />
     <Compile Include="module_battle_Debug.cs" />
