Changed music selector to show what is selected with left and right. and enter toggles stop or play.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -69,7 +69,7 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x86\DebugLinux\</OutputPath>
     <DefineConstants>DEBUG;DEBUG
-    </DefineConstants>
+    ;_WINDOWS</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
