was looking through warnings removed see from audio since i wasn't using it anymore. added a warning disable to buffered stream.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -89,6 +89,7 @@
     <Compile Include="init_debugger_battle.cs" />
     <Compile Include="init_debugger_fields.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="IVertex.cs" />
     <Compile Include="LZSS.cs" />
     <Compile Include="MakiExtended.cs" />
     <Compile Include="Memory.cs" />
