made a test class because I had trouble just boot strapping new functionality to my current class. using https://github.com/FFmpeg/FFmpeg/blob/master/doc/examples/avio_reading.c as a base. And it is compiling and running from start to end no exceptions. now to either make this class play sound or just add the code to ffcc.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -139,6 +139,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="debug_MCH.cs" />
     <Compile Include="ExtapathyExtended.cs" />
     <Compile Include="Ffcc.cs" />
