--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -139,6 +139,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
+    <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
+    <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
+    <Compile Include="Sources\Environment\Game\Location\LinuxGameLocationProvider.cs" />
+    <Compile Include="Sources\Environment\Game\Location\WindowsGameLocationProvider.cs" />
+    <Compile Include="Sources\Environment\Runtime\RuntimeEnvironment.cs" />
+    <Compile Include="Sources\Environment\Runtime\RuntimePlatform.cs" />
+    <Compile Include="Sources\Environment\Build\BuildEnvironment.cs" />
     <Compile Include="debug_MCH.cs" />
     <Compile Include="ExtapathyExtended.cs" />
     <Compile Include="Ffcc.cs" />
@@ -164,6 +171,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PseudoBufferedStream.cs" />
+    <Compile Include="Sources\Environment\Game\Location\HardcodedGameLocationProvider.cs" />
+    <Compile Include="Sources\Exceptions\ExceptionList.cs" />
     <Compile Include="TEX.cs" />
     <Compile Include="TIM2.cs" />
     <Compile Include="debug_battleDat.cs" />
@@ -265,6 +274,7 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
