--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -140,6 +140,7 @@
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="debug_MCH.cs" />
+    <Compile Include="Entry.cs" />
     <Compile Include="ExtapathyExtended.cs" />
     <Compile Include="Faces.cs" />
     <Compile Include="Ffcc.cs" />
@@ -147,10 +148,12 @@
     <Compile Include="FFmpegBinariesHelper.cs" />
     <Compile Include="Font.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Icons.cs" />
     <Compile Include="init_debugger_Audio.cs" />
     <Compile Include="init_debugger_battle.cs" />
     <Compile Include="init_debugger_fields.cs" />
     <Compile Include="Input.cs" />
+    <Compile Include="Loc.cs" />
     <Compile Include="LZSS.cs" />
     <Compile Include="MakiExtended.cs" />
     <Compile Include="Memory.cs" />
@@ -162,6 +165,7 @@
     <Compile Include="module_main_menu_debug.cs" />
     <Compile Include="module_movie_test.cs" />
     <Compile Include="module_overture_debug.cs" />
+    <Compile Include="Module_testmenu_debug.cs" />
     <Compile Include="module_world_debug.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
