--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -139,6 +139,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
+    <Compile Include="EntryGroup.cs" />
+    <Compile Include="I_SP2.cs" />
+    <Compile Include="I_SP1.cs" />
     <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
     <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
     <Compile Include="Sources\Environment\Game\Location\LinuxGameLocationProvider.cs" />
