Since Faces and Cards are similar file structures. I wanted to inherit the faces class to cards. Looks like it might work. atleast till I add the hires versions.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -139,6 +139,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
+    <Compile Include="Cards.cs" />
     <Compile Include="EntryGroup.cs" />
     <Compile Include="I_SP2.cs" />
     <Compile Include="I_SP1.cs" />
