I added a lock to dispose to keep it from disposing while the task is doing work. And I added isdisposed checks to task to prevent it from continuing after the lock is released. Have State and mode changed on dispose. Before they were left alone. I completed work on abstract class and now Cards and Icons inherit that. Icons almost could inherit the class as well as there is alot of similarities, but alot would need overridden so i'm unsure if it's worth it. Might try it for fun after this commit.
moved abstractclass SP2 to it's own file.

Removed Interfaces

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -141,8 +141,6 @@
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="Cards.cs" />
     <Compile Include="EntryGroup.cs" />
-    <Compile Include="I_SP2.cs" />
-    <Compile Include="I_SP1.cs" />
     <Compile Include="Module_card_test.cs" />
     <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
     <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
@@ -188,6 +186,7 @@
     <Compile Include="Sources\MonoGame\Hooks\MonoGameHooks.cs" />
     <Compile Include="Sources\MonoGame\Hooks\OpenALWindowsHook.cs" />
     <Compile Include="Sources\NetFramework\TypeExtensionMethods.cs" />
+    <Compile Include="SP2.cs" />
     <Compile Include="TEX.cs" />
     <Compile Include="TIM2.cs" />
     <Compile Include="debug_battleDat.cs" />
