--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -140,7 +140,10 @@
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="Cards.cs" />
+    <Compile Include="Cards.ID.cs" />
     <Compile Include="EntryGroup.cs" />
+    <Compile Include="Faces.ID.cs" />
+    <Compile Include="Icons.ID.cs" />
     <Compile Include="Module_card_test.cs" />
     <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
     <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
