Stuff is getting crouded. I was thinking we could break stuff up into folders by module. might even be good to have different namespaces too. for instance the cards for triple triad would be a different class than one in menus. for now i'll just put cards faces and icons in there.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -139,11 +139,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
-    <Compile Include="Cards.cs" />
-    <Compile Include="Cards.ID.cs" />
+    <Compile Include="Menu\Cards.cs" />
+    <Compile Include="Menu\Cards.ID.cs" />
     <Compile Include="EntryGroup.cs" />
-    <Compile Include="Faces.ID.cs" />
-    <Compile Include="Icons.ID.cs" />
+    <Compile Include="Menu\Faces.ID.cs" />
+    <Compile Include="Menu\Icons.ID.cs" />
     <Compile Include="Module_card_test.cs" />
     <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
     <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
@@ -155,13 +155,13 @@
     <Compile Include="debug_MCH.cs" />
     <Compile Include="Entry.cs" />
     <Compile Include="ExtapathyExtended.cs" />
-    <Compile Include="Faces.cs" />
+    <Compile Include="Menu\Faces.cs" />
     <Compile Include="Ffcc.cs" />
     <Compile Include="FfccVaribleGroup.cs" />
     <Compile Include="FFmpegBinariesHelper.cs" />
     <Compile Include="Font.cs" />
     <Compile Include="Game1.cs" />
-    <Compile Include="Icons.cs" />
+    <Compile Include="Menu\Icons.cs" />
     <Compile Include="init_debugger_Audio.cs" />
     <Compile Include="init_debugger_battle.cs" />
     <Compile Include="init_debugger_fields.cs" />
