--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -144,6 +144,7 @@
     <Compile Include="EntryGroup.cs" />
     <Compile Include="Menu\Faces.ID.cs" />
     <Compile Include="Menu\Icons.ID.cs" />
+    <Compile Include="Menu\Icons.InsertCustomEntries.cs" />
     <Compile Include="Module_card_test.cs" />
     <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
     <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
