Started to add a MSG class to read some string arrays from msg files. noticed some characters were missing from our char table. So i used the texture as a guide and went down the list and added the special characters. I put all this in a excel spreadsheet so i could read the msg files and see what's in there.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Menu\Icons.InsertCustomEntries.cs" />
     <Compile Include="Menu\Magazine.InsertCustomEntries.cs" />
     <Compile Include="Menu\Magazine.ID.cs" />
+    <Compile Include="Menu\MSG.cs" />
     <Compile Include="Module_card_test.cs" />
     <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
     <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
