Finished up magazine class. for loading images of magazines and tutorials.
updated SP2 to support loading from multiple textures that aren't named the same.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Menu\Faces.ID.cs" />
     <Compile Include="Menu\Icons.ID.cs" />
     <Compile Include="Menu\Icons.InsertCustomEntries.cs" />
+    <Compile Include="Menu\Magazine.cs" />
     <Compile Include="Menu\Magazine.InsertCustomEntries.cs" />
     <Compile Include="Menu\Magazine.ID.cs" />
     <Compile Include="Menu\MSG.cs" />
