progess made on load screen
well it's been a while since I commited lol

I got a basic layout of the select slot screen drawing. I had muliple bugs with entrygroup drawing that I didn't see till I did this. they are now fixed.

the background of windows now only stretches if it's smaller then the desired draw location. in order for all the windows to look the same i had to also set scale instead of auto detecting it.

I added a new value to entry for enabling fill on a texture.

moved more menu files into the menu folder.

I switched over to the newer hires fonts in the menus the low res font doesn't scale well.  I also added a small drop shadow. maybe we can make it optional in the future for people to just swap which font they want on the fly.

added a modded bool to texturehandler so we can detect if modded textures are being used. so i could skip the drawshadow if there is a mod.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -149,11 +149,11 @@
     <Compile Include="Menu\Magazine.InsertCustomEntries.cs" />
     <Compile Include="Menu\Magazine.ID.cs" />
     <Compile Include="Menu\Strings.cs" />
-    <Compile Include="Module_card_test.cs" />
-    <Compile Include="Module_main_menu_debug.Item.cs" />
-    <Compile Include="Module_main_menu_Loading.cs" />
-    <Compile Include="Module_main_menu_MainLobby.cs" />
-    <Compile Include="Module_main_menu_DebugLobby.cs" />
+    <Compile Include="Menu\Module_card_test.cs" />
+    <Compile Include="Menu\Module_main_menu_debug.Item.cs" />
+    <Compile Include="Menu\Module_main_menu_Loading.cs" />
+    <Compile Include="Menu\Module_main_menu_MainLobby.cs" />
+    <Compile Include="Menu\Module_main_menu_DebugLobby.cs" />
     <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
     <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
     <Compile Include="Sources\Environment\Game\Location\LinuxGameLocationProvider.cs" />
@@ -182,10 +182,10 @@
     <Compile Include="ModuleHandler.cs" />
     <Compile Include="Battle\module_battle.cs" />
     <Compile Include="Battle\module_battle_Debug.cs" />
-    <Compile Include="Module_face_test.cs" />
+    <Compile Include="Menu\Module_face_test.cs" />
     <Compile Include="module_field_debug.cs" />
-    <Compile Include="Module_icon_test.cs" />
-    <Compile Include="module_main_menu_debug.cs" />
+    <Compile Include="Menu\Module_icon_test.cs" />
+    <Compile Include="Menu\module_main_menu_debug.cs" />
     <Compile Include="module_movie_test.cs" />
     <Compile Include="module_overture_debug.cs" />
     <Compile Include="World\module_world_debug.cs" />
