wip loading save

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -139,6 +139,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="ArchiveWorker.cs" />
+    <Compile Include="ff8files.cs" />
     <Compile Include="Menu\Cards.cs" />
     <Compile Include="Menu\Cards.ID.cs" />
     <Compile Include="EntryGroup.cs" />
