Got location strings added to strings.cs and made strings.cs multifile friendly. had to revert loading menu as power went out and file got corrupt. I made sure code everything compiled. :)
archivesearch works though it's slow I was able to find the strings I wanted. so I know what files to process next :D

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -138,6 +138,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ArchiveSearch.cs" />
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="DirtyEncoder.cs" />
     <Compile Include="ff8files.cs" />
