--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -141,7 +141,6 @@
     <Compile Include="ArchiveSearch.cs" />
     <Compile Include="ArchiveWorker.cs" />
     <Compile Include="DirtyEncoder.cs" />
-    <Compile Include="ff8files.cs" />
     <Compile Include="Menu\Cards.cs" />
     <Compile Include="Menu\Cards.ID.cs" />
     <Compile Include="EntryGroup.cs" />
@@ -157,6 +156,7 @@
     <Compile Include="Menu\Module_main_menu_Loading.cs" />
     <Compile Include="Menu\Module_main_menu_MainLobby.cs" />
     <Compile Include="Menu\Module_main_menu_DebugLobby.cs" />
+    <Compile Include="Saves.cs" />
     <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
     <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
     <Compile Include="Sources\Environment\Game\Location\LinuxGameLocationProvider.cs" />
