--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -163,11 +163,16 @@
     <Compile Include="Menu\Module_main_menu_DebugLobby.cs" />
     <Compile Include="Saves.CharacterData.cs" />
     <Compile Include="Saves.Characters.cs" />
+    <Compile Include="Saves.ChocoboWorld.cs" />
+    <Compile Include="Saves.Costume.cs" />
     <Compile Include="Saves.cs" />
     <Compile Include="Saves.Data.cs" />
-    <Compile Include="Saves.FF8Variables.cs" />
+    <Compile Include="Saves.FieldVars.cs" />
     <Compile Include="Saves.GFData.cs" />
     <Compile Include="Saves.GFs.cs" />
+    <Compile Include="Saves.Shop.cs" />
+    <Compile Include="Saves.TripleTriad.cs" />
+    <Compile Include="Saves.Worldmap.cs" />
     <Compile Include="Sources\Environment\Game\Location\GameLocation.cs" />
     <Compile Include="Sources\Environment\Game\Location\IGameLocationProvider.cs" />
     <Compile Include="Sources\Environment\Game\Location\LinuxGameLocationProvider.cs" />
