more hp function tweaks
fiddled with kernel hp calc. posted on fourms because numbers don't match maybe someone will know why.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ AForge.*
 FF8/Content/obj/*
 FF8/Content/obj/DesktopGL/Content/.mgstats
 FF8/Content/obj/DesktopGL/Content/.mgstats
+FF8/Content/obj/DesktopGL/Content/.mgstats
