--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Menu\Faces.ID.cs" />
     <Compile Include="Menu\Icons.ID.cs" />
     <Compile Include="Menu\Icons.InsertCustomEntries.cs" />
+    <Compile Include="Menu\Kernel_bin.Battle_Commands.cs" />
     <Compile Include="Menu\Kernel_bin.Character_Stats.cs" />
     <Compile Include="Menu\Kernel_bin.cs" />
     <Compile Include="Menu\Kernel_bin.Gender.cs" />
