added enums linked them to kernel structures.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -150,13 +150,20 @@
     <Compile Include="Menu\Faces.ID.cs" />
     <Compile Include="Menu\Icons.ID.cs" />
     <Compile Include="Menu\Icons.InsertCustomEntries.cs" />
+    <Compile Include="Menu\Kernel_bin.Attack_Flags.cs" />
     <Compile Include="Menu\Kernel_bin.Battle_Commands.cs" />
     <Compile Include="Menu\Kernel_bin.Character_Stats.cs" />
     <Compile Include="Menu\Kernel_bin.cs" />
+    <Compile Include="Menu\Kernel_bin.Element.cs" />
     <Compile Include="Menu\Kernel_bin.Enemy_Attacks_Data.cs" />
     <Compile Include="Menu\Kernel_bin.Gender.cs" />
     <Compile Include="Menu\Kernel_bin.Junctionable_GFs_Data.cs" />
     <Compile Include="Menu\Kernel_bin.Magic_Data.cs" />
+    <Compile Include="Menu\Kernel_bin.Magic_ID.cs" />
+    <Compile Include="Menu\Kernel_bin.Renzokuken_Finishers_Data.cs" />
+    <Compile Include="Menu\Kernel_bin.Statuses0.cs" />
+    <Compile Include="Menu\Kernel_bin.Statuses1.cs" />
+    <Compile Include="Menu\Kernel_bin.Target.cs" />
     <Compile Include="Menu\Kernel_bin.Weapons_Data.cs" />
     <Compile Include="Menu\Magazine.cs" />
     <Compile Include="Menu\Magazine.InsertCustomEntries.cs" />
