Made a base class for Equipable_Abilities because it covers 4 different classes.  And, put the 4 arrays into a list.
So now the abilities populate correctly on the junction abilities screen. Though the type will determine the name. so I need to change those icons.

--- a/FF8/FF8.csproj
+++ b/FF8/FF8.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Menu\Kernel\Kernel_bin.Duel_Zell_limit_break.cs" />
     <Compile Include="Menu\Kernel\Kernel_bin.Element.cs" />
     <Compile Include="Menu\Kernel\Kernel_bin.Enemy_Attacks_Data.cs" />
+    <Compile Include="Menu\Kernel\Kernel_bin.Equipable_Abilities.cs" />
     <Compile Include="Menu\Kernel\Kernel_bin.Gender.cs" />
     <Compile Include="Menu\Kernel\Kernel_bin.GF_abilities.cs" />
     <Compile Include="Menu\Kernel\Kernel_bin.JunctionAbilityFlags.cs" />
